--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 Home page of David Kirn~
 <p>
-<a href="http://dvkirn.wordpress.com">Blog</a>
+<a href="https://dvkirn.wordpress.com">Blog</a>
 </p>
