blog redirection fixed

--- a/index.html
+++ b/index.html
@@ -1,4 +1,13 @@
-Home page of David Kirn~
-<p>
-<a href="https://dvkirn.wordpress.com" target="_blank">Blog</a>
-</p>
+<!DOCTYPE HTML>
+<html lang="en-US">
+  <head>
+    Home page of David Kirn~
+    <title>David Kirn Homepage</title>
+  </head>
+  <body>
+    <p id="main">
+      <a href="blog.html" target="_blank">Blog</a>
+    </p>
+  </body>    
+  
+</html>
