--- a/blog.html
+++ b/blog.html
@@ -9,6 +9,7 @@
         <title>Page Redirection</title>
     </head>
     <body>
-        If you are not redirected automatically, follow the <a href='https://dvkirn.wordpress.com'>link to dvkirn.wordpress.com</a>
+      If you are not redirected automatically to my blog
+      <a href='https://dvkirn.wordpress.com'>click here</a>
     </body>
 </html>
