added techne redirect

--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
     <title>David Kirn Homepage</title>
   </head>
   <body>
-    <p id="main">
-      <a href="blog.html" target="_blank">Blog</a>
+    <p><a href="blog.html" target="_blank">Blog</a></p>
+    <b>Projects</b>
+    <p>
+      <a href="techne.html">Techne </a>
+      A Text Editor in C
     </p>
   </body>    
   
