--- a/blog.html
+++ b/blog.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
   <head>
     <script type="text/javascript">
-      window.location.href = "https://dvkirn.wordpress.com"
+      window.location.replace("https://dvkirn.wordpress.com");
     </script>
 
     <meta charset="UTF-8">
