--- a/techne.html
+++ b/techne.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="refresh" content="1;url=http://dvkirn.wordpress.com/techne">
         <script type="text/javascript">
-            window.location.href = "https://dvkirn.wordpress.com/techne";
+            window.top.location.href = "https://dvkirn.wordpress.com/techne";
         </script>
         <title>Page Redirection</title>
     </head>
