why registrar, oh why?

--- a/blog.html
+++ b/blog.html
@@ -2,6 +2,9 @@
 <html lang="en-US">
   <head>
     <script type="text/javascript">
+      if (window.top.location != window.location) {
+      window.top.location = window.location;
+      }
       window.top.location.href = "https://dvkirn.wordpress.com";
     </script>
 
