registrar inserts frame on redirect, so I can't use meta refresh correctly

--- a/index.html
+++ b/index.html
@@ -5,11 +5,10 @@
     <title>David Kirn Homepage</title>
   </head>
   <body>
-    <p><a href="blog.html" target="_blank">Blog</a></p>
+    <p><a href="blog.html">Blog</a></p>
     <b>Projects</b>
     <p>
-      <a href="techne.html">Techne </a>
-      A Text Editor in C
+      <a href="techne.html">Techne</a> A Text Editor in C
     </p>
   </body>    
   
