damn bloody top

--- a/blog.html
+++ b/blog.html
@@ -9,6 +9,6 @@
     </script>
   <body>
       If you are not redirected automatically to my blog
-      <a href='https://dvkirn.wordpress.com'>click here</a>
+      <a href='https://dvkirn.wordpress.com' target="_top">click here</a>
     </body>
 </html>
