--- a/techne.html
+++ b/techne.html
@@ -11,6 +11,6 @@
   </head>
     <body>
       If you are not redirected automatically to the main Techne page
-      <a href='https://dvkirn.wordpress.com/techne'>click here</a>
+      <a href='https://dvkirn.wordpress.com/techne' target="_top">click here</a>
     </body>
 </html>
