damn bloody tops

--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE HTML>
 <html lang="en-US">
   <head>
+    <script>
+      if (window.top.location != window.location) {
+          window.top.location = window.location;
+      }
+    </script>
     Home page of David Kirn~
     <title>David Kirn Homepage</title>
   </head>
