--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <script>
       if (window.top.location != window.location) {
-          window.top.location = window.location;
+          //window.top.location = window.location;
       }
     </script>
     Home page of David Kirn~
