--- a/fan_service.html
+++ b/fan_service.html
@@ -15,7 +15,7 @@
     <div align="center">
       
     <img src="https://dvkirn.files.wordpress.com/2015/09/1.gif">
-    <img src="https://dvkirn.files.wordpress.com/2015/09/2.gif">
+    <img src="https://dvkirn.files.wordpress.com/2015/09/2.gif" height=270>
     <br>
     <img src="https://dvkirn.files.wordpress.com/2015/09/4.gif">
     <img src="https://dvkirn.files.wordpress.com/2015/09/fino_with_fan.gif">
