made it a litte more slick

--- a/fan_service.html
+++ b/fan_service.html
@@ -1,17 +1,18 @@
 <!DOCTYPE HTML>
 <html lang="en-US">
   <head>
+    <link href='https://fonts.googleapis.com/css?family=Anonymous+Pro' rel='stylesheet' type='text/css'>
     <script>
       if (window.top.location != window.location) {
           //window.top.location = window.location;
       }
     </script>
-    <div align="center">
+    <div style="color:white;font-family:'Anonymous Pro'" align="center">
       <h2>Fan Service</h2>
     </div>
     <title>Fan Service</title>
   </head>
-  <body>
+  <body style="background-color:#1d1d1d">
     <div align="center">
       
     <img src="https://dvkirn.files.wordpress.com/2015/09/1.gif">
