--- a/fan_service.html
+++ b/fan_service.html
@@ -18,10 +18,12 @@
     <img src="https://dvkirn.files.wordpress.com/2015/09/1.gif">
     <img src="https://dvkirn.files.wordpress.com/2015/09/2.gif" height=270>
     <br>
+    <img = src="https://dvkirn.files.wordpress.com/2015/09/5.gif">
     <img src="https://dvkirn.files.wordpress.com/2015/09/4.gif">
-    <img src="https://dvkirn.files.wordpress.com/2015/09/fino_with_fan.gif">
     <br>
+    <img src="https://dvkirn.files.wordpress.com/2015/09/fino_with_fan.gif">
     <img src="https://dvkirn.files.wordpress.com/2015/09/k-on-gif-kawaii-anime-35236397-500-281.gif">
+    <br>
     <img src="https://dvkirn.files.wordpress.com/2015/09/tumblr_m6vs5wwmnw1ratdxxo1_500.gif">
     </div>
   </body>      
