--- a/test_post.html
+++ b/test_post.html
@@ -48,7 +48,7 @@
   <div>
     <footer class="footer" align="center" >
       <p>Copyright David Kirn 2015</p>
-      <h5>Contact: <a style="color:white" href="mailto:dvkirn@gmail.com">dvkirn@gmail.com</a></h5>
+      <h5>Contact: <a style="color:white" href="mailto:admin@dvkirn.net">admin at dvkirn.net</a></h5>
     </footer>
   </div>
 </html>
