finally getting a little cleaner looking

--- a/test_post.html
+++ b/test_post.html
@@ -11,7 +11,7 @@
     </script>
     <title>DvKirn</title>
   </head>
-  <body style="background-color:black;font-family:'Gentium Book Basic'">
+  <body>
     <nav class="navlist">
       <a class="navlink" href="#home">Home</a>
       <a class="navlink" href="#blog">Blog</a>
@@ -20,8 +20,9 @@
     </nav>
 
     <div align="left" class=text_box>    
-      <div style="font-family:'Anonymous Pro'" align="center">
-        <h2>Test Post</h2> <h5>september 26, 2015</h5>
+      <div class="title">
+        <h2>Test Post</h2>
+        <h5>september 26, 2015</h5>
       </div>
         <p>He difficult contented we determine ourselves me am earnestly. Hour no find it park. Eat welcomed any husbands moderate. Led was misery played waited almost cousin living. Of intention contained is by middleton am. Principles fat stimulated uncommonly considered set especially prosperous. Sons at park mr meet as fact like. </p>
 
@@ -29,6 +30,7 @@
 
         <p>Death there mirth way the noisy merit. Piqued shy spring nor six though mutual living ask extent. Replying of dashwood advanced ladyship smallest disposal or. Attempt offices own improve now see. Called person are around county talked her esteem. Those fully these way nay thing seems. </p>
 
+        <img src="https://dvkirn.files.wordpress.com/2015/09/5.gif"></img>
         <p>Full he none no side. Uncommonly surrounded considered for him are its. It we is read good soon. My to considered delightful invitation announcing of no decisively boisterous. Did add dashwoods deficient man concluded additions resources. Or landlord packages overcame distance smallest in recurred. Wrong maids or be asked no on enjoy. Household few sometimes out attending described. Lain just fact four of am meet high. </p>
 
         <p>An an valley indeed so no wonder future nature vanity. Debating all she mistaken indulged believed provided declared. He many kept on draw lain song as same. Whether at dearest certain spirits is entered in to. Rich fine bred real use too many good. She compliment unaffected expression favourable any. Unknown chiefly showing to conduct no. Hung as love evil able to post at as. </p>
