made some font choices

--- a/test_post.html
+++ b/test_post.html
@@ -1,8 +1,10 @@
 <!DOCTYPE HTML>
 <html lang="en-US">
   <head>
+    <!-- FONTS -->
     <link href='https://fonts.googleapis.com/css?family=Anonymous+Pro' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Gentium+Book+Basic' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Raleway:100' rel='stylesheet' type='text/css'>
     <link href="master.css" rel="stylesheet" type="test/css">
     <script>
       if (window.top.location != window.location) {
@@ -19,11 +21,11 @@
       <a class="navlink" href="#about">About</a>
     </nav>
 
-    <div align="left" class=text_box>    
+    <div class=text_box>    
       <div class="title">
-        <h2>Test Post</h2>
-        <h5>september 26, 2015</h5>
+        <h1>This is a title</h1>
       </div>
+        <div align="center">september 26, 2015</div>
         <p>He difficult contented we determine ourselves me am earnestly. Hour no find it park. Eat welcomed any husbands moderate. Led was misery played waited almost cousin living. Of intention contained is by middleton am. Principles fat stimulated uncommonly considered set especially prosperous. Sons at park mr meet as fact like. </p>
 
         <p>You disposal strongly quitting his endeavor two settling him. Manners ham him hearted hundred expense. Get open game him what hour more part. Adapted as smiling of females oh me journey exposed concern. Met come add cold calm rose mile what. Tiled manor court at built by place fanny. Discretion at be an so decisively especially. Exeter itself object matter if on mr in. </p>
