actually use master css

--- a/fan_service.html
+++ b/fan_service.html
@@ -1,20 +1,20 @@
 <!DOCTYPE HTML>
 <html lang="en-US">
   <head>
-    <link href='https://fonts.googleapis.com/css?family=Anonymous+Pro' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Raleway:100' rel='stylesheet' type='text/css'>
+    <link href="master.css" rel="stylesheet" type="test/css">
     <script>
       if (window.top.location != window.location) {
           //window.top.location = window.location;
       }
     </script>
-    <div style="color:white;font-family:'Anonymous Pro'" align="center">
-      <h2>Fan Service</h2>
-    </div>
     <title>Fan Service</title>
   </head>
-  <body style="background-color:#1d1d1d">
+  <body>
+    <div class="title">
+      <h2>Fan Service</h2>
+    </div>
     <div align="center">
-      
     <img src="https://dvkirn.files.wordpress.com/2015/09/1.gif">
     <img src="https://dvkirn.files.wordpress.com/2015/09/2.gif" height=270>
     <br>
