it's something I guess

--- a/index.html
+++ b/index.html
@@ -1,20 +1,40 @@
 <!DOCTYPE HTML>
 <html lang="en-US">
   <head>
+    <!-- FONTS -->
+    <link href='https://fonts.googleapis.com/css?family=Raleway:100' rel='stylesheet' type='text/css'>
+    <link href="master.css" rel="stylesheet" type="test/css">
     <script>
       if (window.top.location != window.location) {
           //window.top.location = window.location;
       }
     </script>
-    Home page of David Kirn~
-    <title>David Kirn Homepage</title>
+    <title>DvKirn</title>
   </head>
   <body>
-    <p><a href="blog.html">Blog</a></p>
-    <b>Projects</b>
-    <p>
+    <nav class="navlist">
+      <a class="navlink" href="index.html">Home</a>
+      <a class="navlink" href="blog.html">Blog</a>
+      <a class="navlink" href="#projects">Projects</a>
+      <a class="navlink" href="#about">About</a>
+    </nav>
+
+    <div class=text_box>    
+      <div class="title">
+        <h1>Homepage of David Kirn</h1>
+      </div>
+      <p>Not much here yet</p>
+      <p><a href="blog.html">Blog</a></p>
+      <b>Projects</b>
+      <p>
       <a href="techne.html">Techne</a> A Text Editor in C
-    </p>
-  </body>    
-  
+      </p>
+    </div>
+  </body>
+  <div>
+    <footer class="footer" align="center" >
+      <p>Copyright David Kirn 2015</p>
+      <h5>Contact: <a style="color:white" href="mailto:admin@dvkirn.net">admin at dvkirn.net</a></h5>
+    </footer>
+  </div>
 </html>
