--- a/test_post.html
+++ b/test_post.html
@@ -23,8 +23,11 @@
       <div class="title">
         <h1>This is a title</h1>
       </div>
-        <div align="center">september 26, 2015</div>
-        <p>He difficult contented we determine ourselves me am earnestly. Hour no find it park. Eat welcomed any husbands moderate. Led was misery played waited almost cousin living. Of intention contained is by middleton am. Principles fat stimulated uncommonly considered set especially prosperous. Sons at park mr meet as fact like. </p>
+      <div align="center">september 26, 2015</div>
+      <a class="post_nav_link" href="#previous" style="float:left">Previous Post</a>
+      <a class="post_nav_link" href="#next" style="float:right">Next Post</a>
+      <br>
+      <p>He difficult contented we determine ourselves me am earnestly. Hour no find it park. Eat welcomed any husbands moderate. Led was misery played waited almost cousin living. Of intention contained is by middleton am. Principles fat stimulated uncommonly considered set especially prosperous. Sons at park mr meet as fact like. </p>
 
         <p>You disposal strongly quitting his endeavor two settling him. Manners ham him hearted hundred expense. Get open game him what hour more part. Adapted as smiling of females oh me journey exposed concern. Met come add cold calm rose mile what. Tiled manor court at built by place fanny. Discretion at be an so decisively especially. Exeter itself object matter if on mr in. </p>
 
