changed text_box width

--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
       <div class="title">
         <h1>Homepage of David Kirn</h1>
       </div>
-      <p>Not much here yet</p>
+      <p>
+      Not much here yet. Mainly using this as a test bed since I have plans to work on some static site generation rather than relying on wordpress or some other blog system.
+      </p>
       <p><a href="blog.html">Blog</a></p>
       <b>Projects</b>
       <p>
