Updated blog link redirect

--- a/blog.html
+++ b/blog.html
@@ -5,10 +5,10 @@
       if (window.top.location != window.location) {
           window.top.location = window.location;
       }
-      window.top.location.href = "https://dvkirn.wordpress.com";
+      window.top.location.href = "https://t.dvkirn.net";
     </script>
   <body>
       If you are not redirected automatically to my blog
-      <a href='https://dvkirn.wordpress.com' target="_top">click here</a>
+      <a href='https://t.dvkirn.net' target="_top">click here</a>
     </body>
 </html>
